--- a/starterApp/src/main/resources/application.properties
+++ b/starterApp/src/main/resources/application.properties
@@ -1,1 +1,4 @@
-
+spring.datasource.url=jdbc:postgresql://localhost:5432/dvdrental
+spring.datasource.username=postgres
+spring.datasource.password=${POSTGRESQL_PASSWORD}
+spring.liquibase.enabled=false
