--- a/starterApp/src/main/resources/application.properties
+++ b/starterApp/src/main/resources/application.properties
@@ -2,3 +2,5 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/dvdrental
 spring.datasource.username=postgres
 spring.datasource.password=${POSTGRESQL_PASSWORD}
 spring.liquibase.enabled=false
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
